--- a/Play.Common/src/Play.Common/Play.Common.csproj
+++ b/Play.Common/src/Play.Common/Play.Common.csproj
@@ -1,10 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MassTransit.AspNetCore" Version="7.2.1" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="7.2.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
@@ -13,8 +15,6 @@
 
   <ItemGroup>
     <Folder Include="MongoBD\" />
-    <Folder Include="Extensions\" />
-    <Folder Include="Settings\" />
   </ItemGroup>
 
 </Project>
