--- a/Play.Catalog/src/Play.Catalog.Service/appsettings.json
+++ b/Play.Catalog/src/Play.Catalog.Service/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "ServiceSettings": {
-    "ServiceName":  "Catalog"
+    "ServiceName": "Catalog",
+    "Authority": "https://localhost:5008"
   },
   "MongoBdSettings": {
     "Host": "localhost",
