--- a/Play.Inventory/src/Play.Inventory.Service/appsettings.Development.json
+++ b/Play.Inventory/src/Play.Inventory.Service/appsettings.Development.json
@@ -3,6 +3,7 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
+      "Microsoft.AspNetCore.Authorization": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
