--- a/Play.Inventory/src/Play.Inventory.Service/appsettings.json
+++ b/Play.Inventory/src/Play.Inventory.Service/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "ServiceSettings": {
-    "ServiceName":  "Inventory"
+    "ServiceName":  "Inventory",
+    "Authority": "https://localhost:5008"
   },
   "MongoBdSettings": {
     "Host": "localhost",
