Updated frontend client

--- a/Play.Identity/src/Play.Identity/Play.Identity.Service/appsettings.json
+++ b/Play.Identity/src/Play.Identity/Play.Identity.Service/appsettings.json
@@ -13,12 +13,11 @@
     "Host": "localhost",
     "Port": 27017
   },
-  "IdentitySettings": 
-  {
+  "IdentitySettings": {
     "AdminUserEmail": "admin@play.com",
-    "StartingGold":"100"
+    "StartingGold": "100"
   },
-  "IdentityServerSettings":{
+  "IdentityServerSettings": {
     "ApiScopes": [
       {
         "Name": "catalog.fullaccess"
