--- a/Play.Identity/src/Play.Identity/Play.Identity.Service/appsettings.Development.json
+++ b/Play.Identity/src/Play.Identity/Play.Identity.Service/appsettings.Development.json
@@ -6,8 +6,31 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AllowedOrigin": "http://localhost:3000",
   "IdentityServerSettings": {
     "Clients": [
+      {
+        "ClientId": "frontend",
+        "AllowedGrantTypes": [
+          "authorization_code"
+        ],
+        "RequireClientSecret": false,
+        "RedirectUris": [
+          "http://localhost:3000/authentication/login-callback"
+        ],
+        "AllowedScopes": [
+          "openid",
+          "profile",
+          "catalog.fullaccess",
+          "inventory.fullaccess",
+          "IdentityServerApi",
+          "roles"
+        ],
+        "AlwaysIncludeUserClaimsInToken": true,
+        "PostLogoutRedirectUris":[
+          "http:localhost:3000/authentication/logout-callback"
+        ]
+      },
       {
         "ClientId": "postman",
         "AllowedGrantTypes": [
@@ -24,9 +47,10 @@
           "catalog.readaccess",
           "catalog.writeaccess",
           "inventory.fullaccess",
-          "IdentityServerApi"
+          "IdentityServerApi",
+          "roles"
         ],
-        "AlwaysIncludeUserClaimsInToken":  true
+        "AlwaysIncludeUserClaimsInToken": true
       }
     ]
   }
